[package]
name = "tokio-serial"
version = "4.3.3"
authors = ["Zac Berkowitz <zac.berkowitz@gmail.com>"]
description = "A serial port implementation for tokio"
license = "MIT"
homepage = "https://github.com/berkowski/tokio-serial"
repository = "https://github.com/berkowski/tokio-serial"
documentation = "http://docs.rs/tokio-serial"
readme = "README.md"
keywords = ["rs232", "serial", "tokio"]
categories = ["asynchronous", "hardware-support"]
edition = "2018"

[badges]
appveyor = { repository = "berkowski/tokio-serial", service = "github" }
travis-ci = { repository = "berkowski/tokio-serial", service = "github" }

[features]
default = ["libudev"]
libudev = ["serialport/libudev"]

[dependencies]
futures = "0.3"
tokio = { version = "1.7", features = ["net"], default-features = false }
serialport = "3.3.0"

[target.'cfg(unix)'.dependencies]
nix = "^0.17"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["commapi", "fileapi", "handleapi", "winbase", "winnt"] }

[dev-dependencies]
futures = "0.3.8"
tokio = { version = "1.7", features = ["io-std", "io-util", "macros", "rt-multi-thread"], default-features = false }
tokio-util = { version = "0.6.0", features = ["codec"], default-features = false }
bytes = "1.0"
